# snake

./: .gitignore  CMakeLists.txt
src/: globals.hpp  main.cpp  map.hpp  snake.hpp  sprite.hpp
